# requests-ecp

./: .appveyor.yml  .codeclimate.yml  .flake8  .gitignore  .gitlab-ci.yml  .readthedocs.yml  .travis.yml  MANIFEST.in  README.md  RELEASE.md  bandit.yml  pyproject.toml  pytest.ini  requests-ecp.spec  requests_ecp.py  requirements.txt  setup.cfg  setup.py  test_requests_ecp.py
.circleci/: config.yml
.github/workflows/: build.yml  conda.yml  docs.yml  packaging.yml  python.yml
debian/: changelog  control  copyright  rules
debian/patches/: requests-kerberos.patch  series
docs/: conf.py  index.rst  rtd-environment.yml
requests_ecp/: __init__.py  auth.py  ecp.py  session.py
requests_ecp/tests/: __init__.py  test_auth.py  test_ecp.py  test_requests_ecp.py  test_session.py
rpm/: python-requests-ecp.spec  requests-ecp.spec
