[build-system]
requires = [
  "setuptools>=30.3.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "requests-ecp"
description = "SAML/ECP authentication handler for python-requests"
readme = "README.md"
authors = [
  { name = "Duncan Macleod", email = "duncan.macleod@ligo.org" },
]
license = { text = "GPL-3.0-or-later" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
requires-python = ">=3.5"
dependencies = [
  "lxml",
  "requests",
]

dynamic = [
  "version",
]

[project.optional-dependencies]
kerberos = [
  "requests-gssapi >= 1.2.2",
]
tests = [
  "pytest >= 2.9.2",
  "pytest-cov",
  "requests-mock >= 1.5.0",
]
docs = [
  "furo",
  "sphinx",
  "sphinx-argparse",
  "sphinx-design",
  "sphinx_automodapi",
]

[project.urls]
"Bug Tracker" = "https://git.ligo.org/computing/software/requests-ecp/-/issues"
"Documentation" = "https://requests-ecp.readthedocs.io/"
"Source Code" = "https://git.ligo.org/computing/software/requests-ecp/"

# -- tools

[tool.coverage.paths]
# map standard install paths back to the source to
# enable merging coverage of installed module from
# multiple platforms
source = [
  "requests_ecp/",  # <-- source path, must come first
  "*/requests_ecp/",  # <-- any installed path
]

[tool.coverage.report]
precision = 1

[tool.coverage.run]
source = [
  "ciecplib"
]

[tool.pytest.ini_options]
addopts = "-r a -v"

[tool.setuptools]
license-files = [ "LICENSE" ]

[tool.setuptools.dynamic]
version = { attr = "requests_ecp.__version__" }

[tool.setuptools.packages.find]
include = [
  "requests_ecp*",
]
